# erp_service

./: .env.example  .gitignore  DEPLOY.md  Git操作指南.md  README.md  docker-compose.yml  package-lock.json  pom.xml  vscode-settings-example.json  微服务开发计划.md  项目创建总结.md
docker/: Dockerfile.java
erp-list-api/: pom.xml
erp-list-common/: pom.xml
erp-list-frontend/: .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
erp-list-gateway/: pom.xml
erp-list-order-service/: pom.xml
erp-list-payment-service/: pom.xml
erp-list-product-service/: pom.xml
erp-list-promotion-service/: pom.xml
erp-list-purchase-service/: pom.xml
erp-list-refund-service/: pom.xml
erp-list-replenishment-service/: pom.xml
erp-list-seller-service/: pom.xml
erp-list-user-service/: pom.xml
lstm-forecast-service/: README.md  app.py  predictor.py  pyproject.toml  pyrightconfig.json  requirements.txt
scripts/: build-all.sh  start-services.sh  stop-services.sh
sql/: 00_执行所有SQL脚本.sql  01_创建数据库.sql  02_用户服务表结构.sql  03_店铺服务表结构.sql  04_订单服务表结构.sql  05_支付服务表结构.sql  06_促销服务表结构.sql  07_采购服务表结构.sql  08_退款服务表结构.sql  09_补货服务表结构.sql  README.md  erp_list_init_data_only.sql  erp_list_inventory_add_sid_migration.sql  erp_list_inventory_incremental.sql  erp_list_inventory_sid_data_fix.sql  erp_list_order_extra_sales_incremental.sql  erp_list_order_feb_sid1_sid2_incremental.sql  erp_list_order_incremental_20260218_20260224_60.sql  erp_list_order_incremental_60_to_100.sql  erp_list_order_trend_realistic_incremental.sql  incremental_inventory.sql  (+17 more)
(+286 files in other folders)
